kubernetes/fastapi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: mlops
  labels:
    app: fastapi
spec:
  type: NodePort
  selector:
    app: fastapi
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 31100
